# autotrace

./: .clang-format  .cvsignore  .gitignore  .lgtm.yml  .travis.yml  AUTHORS  ChangeLog  FAQ  HACKING  INSTALL  INSTALL_OSX.md  Makefile.am  NEWS  README  README.MING  README.md  REUSE.toml  THANKS  TODO  TRANSLATING.md  acconfig.h  atou.c  atou.h  autogen.sh  autotrace  compile notes.txt  autotrace-config.af  autotrace.1  autotrace.c  autotrace.dsp  autotrace.dsw  autotrace.h  autotrace.m4  autotrace.pc.in  autotrace.sln  autotrace.spec.in  autotrace.vcproj  bitmap.c  bitmap.h  cmdline.h  color.c  (+131 more)
.github/: dependabot.yml
.github/workflows/: alpine-cross-windows.yml  check_localize.yml  codeql.yml  codespell.yml  coverity.yml  format-check.yml  freebsd_test.yml  linux_test.yml  macosx_test.yml  reuse.yml  test.yml  windows.yml  windows_test.yml
distribute/: distribute.sh
distribute/deb/: description-pak  dist.sh  ranlib
distribute/mac/: autotrace-Info.plist  dist.sh
distribute/mac/icns/: AutoTraceIcon.icns  svg2icns.sh
distribute/win/: autotrace.nsi  dist.sh  svg2ico.sh
doc/: despeckle.txt  patchestoming02a.txt
po/: .cvsignore  ChangeLog  LINGUAS  Makevars  POTFILES.in  autotrace.pot  de.po  ja.po  update-pot.sh  update.pl
src/: atou.c  atou.h  autotrace.c  autotrace.h  bitmap.c  cmdline.h  color.c  color.h  curve.c  curve.h  datetime.c  datetime.h  despeckle.c  despeckle.h  epsilon-equal.c  epsilon-equal.h  exception.c  exception.h  filename.c  filename.h  fit.c  fit.h  getopt.c  getopt.h  image-header.h  image-proc.c  image-proc.h  input-bmp.c  input-bmp.h  input-gf.c  input-gf.h  input-magick.c  input-magick.h  input-png.c  input-png.h  input-pnm.c  input-pnm.h  input-tga.c  input-tga.h  input.c  (+63 more)
tests/: functions  runtests.sh
tests/github-#130/: run
tests/github-#131/: run
tests/github-#177-0/: run
tests/github-#177-1/: run
tests/github-#177-2/: run
tests/github-#182/: run
tests/github-#183/: run
tests/github-#32/: run
tests/github-#34/: run
tests/github-#4/: run
tests/github-#47/: run
tests/github-#48/: run
tests/github-#49/: lego_5.tga  run
tests/github-#5/: run
tests/github-#55/: run  testrect.pbm
tests/github-#70/: lego_5.xpm  run
tests/github-#8/: run
